--- a/css/sellSection.css
+++ b/css/sellSection.css
@@ -35,8 +35,9 @@
 .leftSectionBox {
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 .rightSectionBox {
@@ -49,6 +50,23 @@
     font-weight: 600;
     color: var(--textDarkColor);
     text-align: center;
+}
+
+.saveButton {
+    border: none;
+    border-radius: 5px;
+    background-color: var(--backgroundColor);
+    cursor: pointer;
+    transition-duration: 0.3s;
+    width: 200px;
+    height: 35px;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.saveButton:hover {
+    background-color: var(--mainColor);
+    transition-duration: 0.3s;
 }
 
 .imageInput {
@@ -75,6 +93,12 @@
     height: 100%;
     border-radius: 15px 15px 0px 0px;
     z-index: 9;
+}
+
+.typeRoomBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 @media screen and (max-width: 650px) {
