--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -145,6 +145,8 @@ input, select {
     font-size: 18px;
     font-weight: 400;
     cursor: pointer;
+    width: 100%;
+    height: 100%;
 }
 
 .navButton:hover {
@@ -298,6 +300,7 @@ input, select {
 .propertiesBox {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     width: 90%;
     height: 100%;
     gap: 50px;
