--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -37,7 +37,7 @@ h4:first-of-type {
     padding-right: 10px;
 }
 
-input, select {
+input, select, textarea {
     border: none;
     border-radius: 10px;
     background-color: var(--backgroundColor);
@@ -377,12 +377,59 @@ input, select {
     height: 170px;
 }
 
+.filterBox {
+    display: flex;
+    justify-content: center;
+}
+
+.filterBox input {
+    width: 100px;
+}
+
+.filterForm {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+    width: auto;
+    border-radius: 15px 15px 0px 0px;
+    background-color: var(--mainColor);
+    margin-bottom: 15px;
+    padding: 10px;
+}
+
+.filterForm .filterItem {
+    border-radius: 15px;
+    padding: 5px;
+}
+
+.filterButton {
+    margin-right: 10px;
+}
+
+.filterButton, .removeFilterButton {
+    border: none;
+    border-radius: 10px;
+    padding: 5px;
+    cursor: pointer;
+    background-color: var(--backgroundColor);
+    transition-duration: 0.3s;
+}
+
+.filterButton:hover, .removeFilterButton:hover {
+    background-color: var(--mainColor);
+    transition-duration: 0.3s;
+}
+
+.location {
+    max-width: 150px;
+}
+
 @media screen and (max-width: 380px) {
     .mainSectionTitle {
         align-self: center;
         margin-left: 0px !important;
         width: 100vw;
-        height: ;
     }
 
     .siteHeader {
@@ -441,6 +488,12 @@ input, select {
 
     .navButton {
         color: var(--textDarkColor) !important;
+    }
+}
+
+@media screen and (max-width: 880px) {
+    .filterForm {
+        flex-direction: column;
     }
 }
 
