--- a/css/sellSection.css
+++ b/css/sellSection.css
@@ -8,11 +8,30 @@
     --dangerColor: #dc3545;
     --infoColor: #0dcaf0;
     --backgroundColor: #eeeeee;
-    --lightBackgroundColor: #f1f1f1;
     --backgroundDarkColor: #252525;
     --scrollBarMainColor: #FFAC12;
     --scrollBarSecondColor: #9b690b;
     --borderColor: #6d6d6d67;
+}
+
+input::file-selector-button {
+    font-weight: 400;
+    color: var(--textDarkColor);
+    background-color: var(--backgroundColor);
+    font-size: 14px;
+    width: 125px;
+    height: 30px;
+    padding: 5px;
+    margin-top: 4px;
+    border: none;
+    border-radius: 10px;
+    transition-duration: 0.3s;
+    font-family: "Poppins", sans-serif;
+  }
+
+input::file-selector-button:hover {
+    background-color: var(--mainColor);
+    transition-duration: 0.3s;
 }
 
 .sellSectionBox {
@@ -26,11 +45,22 @@
     max-height: 616px;
     top: 150px;
     align-self: center;
-    background-color: var(--lightBackgroundColor);
     border-radius: 15px;
     transition-duration: 0.3s;
     z-index: 8;
     overflow-y: scroll;
+    background: rgba(255, 255, 255, 0.75);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(15.6px);
+    -webkit-backdrop-filter: blur(15.6px);
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.sellSectionBox.visible {
+    opacity: 1;
+    visibility: visible;
 }
 
 .leftSectionBox {
